--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "me",
     "license": "ISC",
     "dependencies": {
+        "file-loader": "^2.0.0",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
         "react-router-dom": "^4.3.1",
