--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-dnd": "^5.0.0",
         "react-dnd-html5-backend": "^5.0.1",
         "react-dom": "^16.4.1",
+        "react-dragscroll": "^2.0.1",
         "react-router-dom": "^4.3.1",
         "webpack-cli": "^3.1.0"
     },
