--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "cssnano": "^4.1.7",
-        "file-loader": "^2.0.0",
         "lodash.clonedeep": "^4.5.0",
         "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
@@ -35,7 +34,9 @@
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
         "css-loader": "^1.0.0",
+        "file-loader": "^2.0.0",
         "style-loader": "^0.22.1",
+        "url-loader": "^1.1.2",
         "webpack": "^4.16.2",
         "webpack-dev-server": "^3.1.5"
     }
