--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "cssnano": "^4.1.7",
+        "firebase": "^5.8.2",
         "lodash.clonedeep": "^4.5.0",
         "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
