--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "A web dev scrap book",
     "main": "index.jsx",
     "scripts": {
-        "start": "webpack-dev-server --open --config webpack.dev.config.js",
+        "start": "webpack-dev-server  --config webpack.dev.config.js",
         "build": "webpack --config webpack.prod.config.js"
     },
     "author": "me",
