--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "cssnano": "^4.1.7",
         "firebase": "^5.8.2",
+        "history": "^4.7.2",
         "lodash.clonedeep": "^4.5.0",
         "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
