--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-dnd": "^5.0.0",
         "react-dnd-html5-backend": "^5.0.1",
         "react-dom": "^16.7.0",
+        "react-draggable": "^3.2.1",
         "react-dragscroll": "^2.0.1",
         "react-router-dom": "^4.4.0-beta.6",
         "sugarss": "^2.0.0",
