--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "firebase": "^5.8.2",
         "history": "^4.7.2",
         "lodash.clonedeep": "^4.5.0",
+        "nes.css": "^2.1.0",
         "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
         "postcss-preset-env": "^6.3.0",
@@ -28,6 +29,7 @@
         "react-dragscroll": "^2.0.1",
         "react-router-dom": "^4.4.0-beta.6",
         "sugarss": "^2.0.0",
+        "ttf-loader": "^1.0.2",
         "webpack-cli": "^3.1.0"
     },
     "devDependencies": {
