--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "firebase": "^5.9.0",
         "history": "^4.7.2",
         "lodash.clonedeep": "^4.5.0",
+        "moment": "^2.24.0",
         "nes.css": "^2.1.0",
         "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
