--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
+        "babel-plugin-root-import": "^6.1.0",
         "cssnano": "^4.1.7",
         "firebase": "^5.9.0",
         "history": "^4.7.2",
