--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "me",
     "license": "ISC",
     "dependencies": {
+        "@firebase/firestore": "^1.3.1",
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "babel-plugin-root-import": "^6.1.0",
